added RestTemplateOptimizer and externalized configurations

--- a/mssc-brewery-client/src/main/resources/application.properties
+++ b/mssc-brewery-client/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 app.brewery.apihost=http://localhost:8080
 server.port=8082
+
+logging.level.org.apache.http=debug
+mssc.maxtotalconnections=100
+mssc.defaultmaxtotalconnections=20
+mssc.connectionrequesttimeout=3000
+mssc.sockettimeout=3000
